fix scroll on mobile

--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -146,4 +146,4 @@ footer nav
     &.nav-photo
         @media (max-width: 1024px) and (orientation: landscape)
             /* avoid scroll bar to appear */
-            right: 1px
+            right: 2px
